--- a/BankrotMenadzer/BankrotMenadzer/Web.config
+++ b/BankrotMenadzer/BankrotMenadzer/Web.config
@@ -14,14 +14,14 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="mojaKonekcija" providerName="System.Data.SqlClient" connectionString="Data Source=KRIS-PC;Initial Catalog=RCYouth;Integrated Security=True"/>
+    <add name="dbConnection" connectionString="SERVER=127.0.0.1;PORT=3307;DATABASE=bk_mng_v1;UID=app;PASSWORD=IKT-Proekt-DB-root; charset=utf8;"/>
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
   <system.web>
-    <trust level="Medium" />
+    <trust level="Full" />
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
         validate="false" />
