--- a/BankrotMenadzer/BankrotMenadzer/Web.config
+++ b/BankrotMenadzer/BankrotMenadzer/Web.config
@@ -9,12 +9,11 @@
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ChartImageHandler" />
-      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
-        path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="dbConnection" connectionString="SERVER=127.0.0.1;PORT=3307;DATABASE=bk_mng_v1;UID=app;PASSWORD=IKT-Proekt-DB-root; charset=utf8;"/>
+    <add name="dbConnection" connectionString="SERVER=127.0.0.1;PORT=3307;DATABASE=bk_mng_v1;UID=app;PASSWORD=IKT-Proekt-DB-root; charset=utf8;" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -23,20 +22,23 @@
   <system.web>
     <trust level="Full" />
     <httpHandlers>
-      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        validate="false" />
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
     </httpHandlers>
     <pages>
       <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
-          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </controls>
     </pages>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5" />
   </system.web>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
