--- a/BankrotMenadzer/BankrotMenadzer/BankrotMenadzer.csproj
+++ b/BankrotMenadzer/BankrotMenadzer/BankrotMenadzer.csproj
@@ -64,6 +64,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap.css" />
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap.min.css" />
+    <Content Include="Content\bootstrap-3.3.4\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\bootstrap-3.3.4\js\bootstrap.js" />
+    <Content Include="Content\bootstrap-3.3.4\js\bootstrap.min.js" />
+    <Content Include="Content\bootstrap-3.3.4\js\npm.js" />
     <Content Include="Content\css\bootstrap-theme.css.map" />
     <Content Include="Content\css\bootstrap.css.map" />
     <Content Include="Content\css\Home.css" />
@@ -83,12 +91,20 @@
     <Content Include="Scripts\bootstrap-daterangepicker-master\moment.min.js" />
     <Content Include="Scripts\Chart.min.js" />
     <Content Include="Scripts\Page JS\history.js" />
+    <Content Include="Scripts\Page JS\master.js" />
+    <Content Include="Scripts\Page JS\wishlist.js" />
     <Content Include="Scripts\randomColor.js" />
     <Content Include="Scripts\validator.js" />
     <Content Include="Wishlist.aspx" />
     <Content Include="Scripts\bootstrap-daterangepicker-master\bower.json" />
     <Content Include="Scripts\bootstrap-daterangepicker-master\package.json" />
     <Content Include="Scripts\bootstrap-daterangepicker-master\README.md" />
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap-3.3.4\css\bootstrap.css.map" />
+    <Content Include="Content\bootstrap-3.3.4\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap-3.3.4\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\bootstrap-3.3.4\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\bootstrap-3.3.4\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
